# cube23

./: .gitignore  .gitmodules  AGENT.md  CLAUDE.md  CMakeLists.txt  Dockerfile.ci  README.md  main.cpp  test.sh
.github/workflows/: artifact-publish.yml  ci.yml  pr-comment.yml
cube23/: CMakeLists.txt
cube23/assets/shaders/: texture.frag  texture.glsl  texture.vert
cube23/shaders/: compile.ps1
cube23/src/: CubeApp.cpp  cube_app.cpp  main.cpp
notes/: opengl-version-analysis.md  renderer-api-expansion-plan.md  vulkan-backend-analysis.md  vulkan-backend-testing-plan.md
shaders/: shader.vert
vkdemo/: CMakeLists.txt
vox/: CMakeLists.txt
vox/src/: Vox.h
vox/src/Vox/: Application.cpp  Application.h  EntryPoint.h
vox/src/platform/opengl/: buffer.cpp  buffer.h  context.cpp  context.h  opengl_context.cpp  renderer_api.cpp  renderer_api.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h
vox/src/platform/vulkan/: vulkan_buffer.cpp  vulkan_buffer.h  vulkan_context.cpp  vulkan_context.h  vulkan_context_factory.cpp  vulkan_renderer_api.cpp  vulkan_renderer_api.h  vulkan_shader.cpp  vulkan_shader.h  vulkan_texture.cpp  vulkan_texture.h  vulkan_vertex_array.cpp  vulkan_vertex_array.h
vox/src/vox/: application.cpp  application.h  core.h  input.cpp  input.h  key_codes.h  mouse_button_codes.h  window.cpp  window.h
vox/src/vox/core/: timestep.h
vox/src/vox/events/: application_event.h  event.h  key_event.h  mouse_event.h
vox/src/vox/renderer/: buffer.cpp  buffer.h  graphics_context.h  orthographic_camera.cpp  orthographic_camera.h  render_command.cpp  render_command.h  renderer.cpp  renderer.h  renderer_api.cpp  renderer_api.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h
